fix: ensure overlay takes precedence on mobile

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -32,6 +32,13 @@ body {
   text-decoration-color: #fc4c02;
 }
 
+.leaflet-bottom {
+  z-index: 400 !important;
+}
+
+.leaflet-top {
+  z-index: 400 !important;
+}
 /* BUTTONS */
 
 .button-primary {
